0.10.0 (currently working on)
- [#4233] Fix: The default value for price_regular_early is missing a decimal (thanks to Eric Chavaillaz)
- [#3988] Fix: Field in the registration TCE forms has no label
- [#3951] Feature: Add a hook for sending the confirmation e-mail (from the BE module)
- [#4210] Feature: Modernize the modifySingleView hook
- [#4104] Feature: Add a hook for modifying the time frame list rows in the single view
- [#4199] Feature: Add a separate flavor for the single view
- [#4198] Fix: The registrationManager cannot be XCLASSed
- [#3873] Feature: Modernize the modifyListView hook
- [#4191] Feature: Add EventModel::getRawTitle
- [#4045] Fix: Always use the display title of events
- [#4042] Fix: Table headings in mod2 are invisible (white on white) in TYPO3 4.4
- [#4170] Fix: tx_seminars_seminar::getOrganizerBag needs to sort the organizers by the relation sorting
- [#4169] Fix: Drop unused code and some unused variables
- [#4152] Feature: In the "my events" list, also list the events to which the logged-in FE user is an additional attendee
- [#4165] Cleanup: Change BagBuilder_Registration::limitToAttendee to expect an FE user model
- [#4159] Fix: In the notification e-mail to the organizers, add a LF before the field data if the field data contains a LF or CR
- [#4151] Feature: Display the e-mail address and position of the FE user on the second registration page
- [#4150] Feature: Add two fields "e-mail" and "position" for additional attendees
- [#4149] Feature: Add some configuration to TS Setup and the flexforms
- [#4144] Fix: Test crash and SQL error in the pi2 test
- [#4132] Cleanup: Use the time constants from tx_oelib_Time
- [#4130] Fix: Set the numeric locale in our CLI scripts
- [#4125] Fix: Check all class_exists for the correct use of the autoload flag
- [#4024] Fix: Test failure: tx_seminars_Mapper_EventTest::getOrganizersWithOneOrganizerReturnsOneOrganizer
- [#4047] Cleanup: Rename all test classes from *_testcase to *Test