@@ -397,8 +397,4 @@ abstract class tx_seminars_BackEnd_AbstractList {
 		return '&amp;tx_seminars_pi2[pid]=' . $pageData['uid'];
 	}
 }
-
-if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/seminars/BackEnd/List.php']) {
-	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/seminars/BackEnd/List.php']);
-}
 ?>
