@@ -407,8 +407,4 @@ abstract class tx_seminars_Bag_Abstract implements Iterator {
 		return '';
 	}
 }
-
-if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/seminars/Bag/Abstract.php']) {
-	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/seminars/Bag/Abstract.php']);
-}
 ?>
