@@ -250,8 +250,4 @@ abstract class tx_seminars_BagBuilder_Abstract {
 		$this->showHiddenRecords = TRUE;
 	}
 }
-
-if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/seminars/BagBuilder/Abstract.php']) {
-	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/seminars/BagBuilder/Abstract.php']);
-}
 ?>
